agregando links a las imagenes

--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
                         <div class="card-header"><h4>Road</h4></div>
                         <div class="card-header"><h4>Cycling</h4></div>
                         <div class="card-body">
-                            <img src="./images/roadcycling.jpeg" class="imgRC">
+                            <a href="https://proyecto-final-genoud.vercel.app/index.html" target="_blank">
+                                <img src="./images/roadcycling.jpeg" class="imgRC">
+                            </a>
                                 <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 páginas.<p>
                                 <p>Cuenta con una galeria de fotos de 36 imágenes, las cuales cuentan con animaciones.<p>
                                 <p>Todas las páginas son responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
-                                <a class="bRC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                                <a class="unete bRC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                     <div class="card GD">
@@ -95,18 +97,20 @@
                             <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 páginas.</p>
                             <p>En el inicio cuenta con una galería de fotos en carrousel de 10 imágenes.</p>
                             <p>Todas las páginas son Responsivas, Es decir: se adapta a distintos tamaños de pantalla.</p>
-                            <a class="bGD" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                            <a class="unete bGD" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                     <div class="card SBC">
                         <div class="card-header"><h4>Store-Bike</h4></div>
                         <div class="card-header"><h4>Competicion</h4></div>
                         <div class="card-body">
-                            <img src="./images/EcommerceBike.jpeg" class="imgSBC">
+                            <a href="https://ecommerce-genoud-bike.vercel.app/dashboard.html" target="_blank">
+                                <img src="./images/EcommerceBike.jpeg" class="imgSBC">
+                            </a>
                                 <p>Store Bike Competicion es un E-Commerce.<p>
                                 <p>Cuenta con tarjetas de producto con animaciones.<p>
                                 <p>Sitio Web totalmente Responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
-                                <a class="bSBC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                                <a class="unete bSBC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                 </section>
